# voice-prompter

./: LICENSE  README.md  install.sh  prompter.py  pyproject.toml
voice_prompter/: __init__.py  cli.py
