[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-prompter"
version = "0.2.0"
description = "Voice-activated teleprompter - shows one phrase at a time, advances when you stop speaking"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Daniel Palmieri"}]
requires-python = ">=3.8"
keywords = ["teleprompter", "voice", "speech", "prompter", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "SpeechRecognition>=3.10.0",
    "pyaudio>=0.2.13",
]

[project.scripts]
prompter = "voice_prompter.cli:main"

[project.urls]
Homepage = "https://github.com/danpalmieri/voice-prompter"
Repository = "https://github.com/danpalmieri/voice-prompter"
